# Emulator

./: Cargo.toml  README.md  rust-toolchain.toml
src/: address.rs  apu.rs  bus.rs  cpu.rs  lib.rs  memory.rs  ppu.rs  ram.rs  roms.rs  system.rs
src/cpu/: addressing_modes.rs  instructions.rs
src/shaders/: shader.wgsl
tests/: cpu.rs  rom_tests.rs  roms.rs
