[package]
name = "nes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#CPU DEPS
# consider proc_bitfield, looking promising
bitflags="1.3.2"
byteorder="1.4.3"
num_enum="0.5.7"


#Graphics Deps
winit = "0.27.3"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13" 
pollster = "0.2"